@@ -6,6 +6,8 @@ synaptic (0.70~pre2) UNRELEASED; urgency=low
     - added, thanks to Dirgita
   * po/ru.po:
     - updated, thansk to Yuri Kozlov (closes: #571712)
+  * gtk/rgdebinstallprogress.cc, gtk/rgterminstallprogress.cc:
+    - fix FTBFS on latest vte (closes: #597384)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Aug 2010 10:27:49 +0200
 
